# MoDa-Browser-Core

./: CMakeLists.txt  Cargo.toml  M005_COMPLETION_REPORT.md  README.md  build_and_test.bat  build_and_test.sh
.github/workflows/: format.yml  test.yml
compass/: MoDa-Browser-based.md  MoDa-Browser-dev.md
src/: core.rs  ipc.rs  main.rs  sandbox.rs  security.rs  tests.rs
src/ipc/: channel.rs  message.rs  mod.rs  security.rs  serialization.rs
