[package]
name = "moda-browser-core"
version = "0.1.0"
edition = "2021"
description = "MoDa Browser Core - 一个基于最小权限原则的现代模块化浏览器引擎"
license = "MIT"
repository = "https://github.com/Ink-dark/MoDa-Browser"

[dependencies]
# 安全相关依赖
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17"
trust-dns-resolver = "0.23"

# 多线程和并发相关
async-trait = "0.1"
crossbeam = "0.8"

# 日志相关
tracing = "0.1"
tracing-subscriber = "0.3"

# 配置相关
config = "0.14"

# 信号处理
signal-hook = "0.3"

# Windows 系统 API
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[lib]
name = "moda_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "moda-browser"
path = "src/main.rs"

[workspace]
members = [".", "src/security", "src/sandbox", "src/ipc"]
